--- a/MODULO25/mq002/estilos/paisagem.css
+++ b/MODULO25/mq002/estilos/paisagem.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* DEITADO LANDSCAPE*/
+
+body{
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+
+}
