--- a/MODULO26/estilos/mobile.css
+++ b/MODULO26/estilos/mobile.css
@@ -33,7 +33,7 @@ section{
     position: absolute;
     top: 50%;
     left: 50%;
-    translate: -50% -50%;    
+    transform: translate(-50%, -50%);    
     width: 320px;
     height: 480px;
     border-radius: 10px;
